--- a/resources/assets/sass/admin/spec/components/formContainer.scss
+++ b/resources/assets/sass/admin/spec/components/formContainer.scss
@@ -87,6 +87,7 @@
     box-shadow: 0 0 0.5em #f1f3f5;
     padding: 15px;
     margin-bottom: 30px;
+    overflow: hidden;
 
     .form-group.highlighted {
       input.form-control {
@@ -124,6 +125,10 @@
         border-left: 0;
         padding-left: 5px;
       }
+    }
+
+    input[type=file] {
+      overflow: hidden;
     }
 
     .image-card {
